--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,5 @@
 pipeline {
-    agent {label "JENKINSS"}
+    agent {label "JENKINS-PROD"}
     stages {
         stage('Git Clone') {
             steps {
